2012-11-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Examples/Developer/StepUnit.st: Fix typo in method name and stop
	using deprecated methods.

2012-11-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STConversation.h
	    (-conversationWithContext:language:):
	* Frameworks/StepTalk/STConversation.m
	    (-conversationWithContext:language:):
	Implement method which is advertised as replacement for the
	deprecated method -conversationWithEnvironment:language:.

	* Frameworks/StepTalk/STConversation.m (-runScriptFromString:,
	-conversationWithEnvironment:language:, -initWithEnvironment:language:,
	-environment):
	* Frameworks/StepTalk/STEnvironmentDescription.m
	  (defaultEnvironmentDescriptionName):
	Fix typos and spacing in warning messages.

2012-10-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/GNUmakefile:
	* Modules/WebServices/Functions.h:
	* Modules/WebServices/Functions.m:
	* Modules/WebServices/GNUmakefile:
	* Modules/WebServices/STWebServicesModule.h:
	* Modules/WebServices/STWebServicesModule.m:
	* Modules/WebServices/ScriptingInfo.plist:
	* Modules/WebServices/WebServicesConstants.list:
	* Modules/WebServices/WebServicesConstants.m:
	* Modules/WebServices/create_constants.awk:
	* Modules/WebServices/footer.m:
	* Modules/WebServices/header.m:
	Add WebServices bundle. Must be requested explicitly by adding
	webservices=yes to the make command line.

2012-10-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/GNUmakefile:
	* Modules/SQLClient/Functions.h:
	* Modules/SQLClient/Functions.m:
	* Modules/SQLClient/GNUmakefile:
	* Modules/SQLClient/SQLClient+additions.m:
	* Modules/SQLClient/SQLClientConstants.list:
	* Modules/SQLClient/SQLClientConstants.m:
	* Modules/SQLClient/STSQLClientModule.h:
	* Modules/SQLClient/STSQLClientModule.m:
	* Modules/SQLClient/ScriptingInfo.plist:
	* Modules/SQLClient/create_constants.awk:
	* Modules/SQLClient/footer.m:
	* Modules/SQLClient/header.m: